[workspace]
members = [ "libkernel" ]

[package]
name = "moss"
version = "0.1.0"
edition = "2024"

[dependencies]
libkernel = { path = "libkernel" }
aarch64-cpu = "11.1.0"
arm-pl011-uart = { version = "0.3.1", default-features = false }
linked_list_allocator = "0.10.5"
static_cell = "2.1.0"
tock-registers = "0.10.1"
thiserror = { version = "2.0.12", default-features = false }
log = "0.4.27"
fdt-parser = "0.4.16"
paste = "1.0.15"
object = { version = "0.37.1", default-features = false, features = ["core", "elf", "read_core"] }
async-trait = "0.1.88"
getargs = { version = "0.5.0", default-features = false }
libc = { version = "0.2.174", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
bitflags = "2.9.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
