[workspace]
members = ["libkernel", "usertest"]

[package]
name = "moss"
version = "0.1.0"
edition = "2024"

[dependencies]
libkernel = { path = "libkernel" }
aarch64-cpu = "11.1.0"
arm-pl011-uart = { version = "0.4.0", default-features = false }
linked_list_allocator = "0.10.5"
tock-registers = "0.10.1"
log = "0.4.27"
fdt-parser = "0.4.16"
paste = "1.0.15"
object = { version = "0.38.0", default-features = false, features = ["core", "elf", "read_core"] }
async-trait = "0.1.88"
getargs = { version = "0.5.0", default-features = false }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
bitflags = "2.9.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

[features]
default = ["smp"]
# Support for Symmetric Multiprocessing
smp = []

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
